# pypkg_template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  MANIFEST.in  Pipfile  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: black.yaml  docs.yaml  lint.yaml  pytest.yaml  ruff.yaml  test.yaml
docs/source/: conf.py  index.rst  modules.rst  pypkg_template.rst
src/pypkg_template/: __init__.py  fibonacci.py
tests/: conftest.py  test_fibonacci.py
