[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pypkg_template"
description = "Sample Python package"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "pypkg_template._version.version" }

[tool.setuptools_scm]
write_to = "src/pypkg_template/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
