[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypkg_template"
description = "Sample Python package"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
requires-python = ">=3.8,<3.13"
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "pypkg_template._version.version" }

[tool.setuptools_scm]
write_to = "src/pypkg_template/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[project.optional-dependencies]
dev = ["black", "pytest", "ruff"]
